--- a/src/scss/ui/contenido/_lugares.scss
+++ b/src/scss/ui/contenido/_lugares.scss
@@ -3,12 +3,27 @@
 
 .lugares {
    &__grid {
+      display: grid;
+      grid-template-columns: repeat(4, 30rem);
+      column-gap: 4rem;
+      @include m.scrollHorizotal;
+
       @include m.tablet {
          @include m.grid(2, 2rem);
       }
 
       @include m.desktop {
          @include m.grid(4, 2rem);
+      }
+   }
+
+   .lugar {
+      &__imagen {
+         border-radius: 1rem;
+      }
+
+      &__nombre {
+         font-size: 1.8rem;
       }
    }
 }
