Experience and footer with the scss added

--- a/src/scss/base/_mixins.scss
+++ b/src/scss/base/_mixins.scss
@@ -43,7 +43,7 @@
 
 @mixin scrollHorizotal {
     overflow-y: hidden;
-    overflow-x: scroll;
+    overflow-x: auto;
     scroll-snap-type: x mandatory;
 
     >* {
